[package]
name = "gh-export"
version = "1.0.0"
edition = "2021"
authors = ["guitaripod <problemsolvertm@gmail.com>"]
description = "Export all GitHub repositories from a user account"
license = "MIT"
repository = "https://github.com/guitaripod/gh-export"
keywords = ["github", "backup", "export", "git"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.19"
indicatif = "0.17"
dirs = "5.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
futures = "0.3"
bytes = "1.7"
tempfile = "3.12"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
once_cell = "1.19"
console = "0.15"
dialoguer = "0.11"
rpassword = "7.3"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[dev-dependencies]
mockito = "1.5"
